# tcc-analyzer

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CLAUDE.md  README.md  RELEASE.md  TODO.md  build.spec  coverage.json  main.py  pyproject.toml  pyrightconfig.json  tasks_20250708-20250708 (1).csv  tasks_20250708-20250708 (3).csv  tasks_20250708-20250708 (4).csv  test.csv  version_info.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  test-release.yml
scripts/: build-executable.py  check_file_length.py
src/tcc_analyzer/: __init__.py  __main__.py  cli.py
src/tcc_analyzer/analyzers/: __init__.py  constants.py  data_analyzer.py  data_loader.py  result_formatter.py  result_processor.py  result_sorter.py  slack_formatter.py  task_analyzer.py  time_parser.py
src/tcc_analyzer/visualization/: __init__.py  base.py  charts.py  factory.py  statistics.py
tests/: __init__.py  test_cli.py  test_cli_analysis_types.py  test_cli_basic.py  test_cli_options.py  test_cli_output_formats.py  test_task_analyzer.py  test_task_analyzer_compatibility.py  test_task_analyzer_core.py  test_task_analyzer_filtering.py  test_task_analyzer_formatting.py  test_task_analyzer_parsing.py  test_visualization.py  test_visualization_charts.py  test_visualization_config.py  test_visualization_heatmap.py  test_visualization_statistics.py  test_visualization_utils.py
